# hatari

./: .cirrus.yml  .cvsignore  .gitignore  .gitlab-ci.yml  .hgignore  .travis.yml  CMakeLists.txt  ChangeLog  Info-Hatari.plist  Makefile  Makefile-MinGW.cnf  Makefile-default.cnf  Makefile.cnf  Makefile.cnf.in  acsite.m4  authors.txt  config-MinGW.h  config-cmake.h  config-default.h  configure  configure.ac  hatari.spec  readme.txt
doc/: CMakeLists.txt  alsa-midi.txt  authors.txt  bugs.txt  coding.txt  compatibility.html  debugger.html  emutos.txt  hatari-ui.html  hatari.1  index.html  keymap-sample.txt  lilo.cfg  m68k-linux-for-hatari.txt  m68k-linux.txt  m68k-netbsd.txt  manual.css  manual.html  memory-usage.txt  midi-linux.txt  release-checklist.txt  release-notes.txt  scsi-driver.txt  thanks.txt  toc.js  todo.txt  update-index.sh  video-recording.txt
doc/de/: tastatur-windows.txt
doc/doxygen/: Doxyfile
doc/fr/: clavier-exemple.txt  hatari.1
python-ui/: .cvsignore  CMakeLists.txt  Changelog  FILES  Makefile  README  TODO  config.py  conftypes.py  debugui.py  dialogs.py  gentypes.py  hatari-console.py  hatari-ui  hatari-ui.glade  hatari-ui.html  hatari-ui.py  hatari.py  hatariui  hatariui.1  hatariui.desktop  hatariui.py  release-notes.txt  setup.py  uihelpers.py
python-ui/tests/: README  gtk-hatari-embed-test.py  gtk-hello-world.py  pygtk-hatari-embed-test.py  pygtk-hello-world.py
share/: CMakeLists.txt
share/applications/: hatari.desktop
src/: .cvsignore  CMakeLists.txt  Makefile  acia.c  audio.c  avi_record.c  bios.c  blitter.c  breakcond.c  buserror.c  cart.c  cartData.c  cart_asm.s  cartimg.c  cfgopts.c  change.c  clocks_timings.c  configuration.c  control.c  conv_gen.c  conv_st.c  createBlankImage.c  createDiscImage.c  crossbar.c  cycInt.c  cycles.c  debug.c  debugui.c  dialog.c  dim.c  disass.c  dmaSnd.c  emscripten.js  emscripten_shell.html  errlog.c  event.c  faketos.s  faketosData.c  fdc.c  file.c  (+77 more)
src/convert/: high640x1.c  high640x8.c  low320x16.c  low320x16_spec.c  low320x32.c  low320x32_spec.c  low320x8.c  low640x16.c  low640x16_spec.c  low640x32.c  low640x32_spec.c  low640x8.c  macros.h  med640x16.c  med640x16_spec.c  med640x32.c  med640x32_spec.c  med640x8.c  routines.h  spec320x16.c  spec320x32.c  spec640x16.c  spec640x32.c  vdi16.c  vdi2.c  vdi4.c
src/cpu/: CMakeLists.txt  build68k.c  compat.h  cpu_prefetch.h  cpummu.c  cpummu.h  cpummu030.c  cpummu030.h  custom.c  custom.h  debug.c  debug.h  debugmem.h  disasm.c  disasm.h  events.c  events.h  events_jit.h  events_normal.h  falcon_cycle030.h  fpp.c  fpp.h  fpp_native.c  fpp_softfloat.c  gencpu.c  hatari-glue.c  hatari-glue.h  m68k.h  maccess.h  md-fpp.h  memory.c  memory.h  mmu_common.h  newcpu.c  newcpu.h  newcpu_common.c  options_cpu.h  readcpu.c  readcpu.h  rpt.h  (+6 more)
src/debug/: 68kDisass.c  68kDisass.h  CMakeLists.txt  Makefile  a.out.h  breakcond.c  breakcond.h  calculate.c  calculate.h  console.c  console.h  debugInfo.c  debugInfo.h  debug_priv.h  debugcpu.c  debugcpu.h  debugdsp.c  debugdsp.h  debugui.c  debugui.h  evaluate.c  evaluate.h  history.c  history.h  log.c  log.h  natfeats.c  natfeats.h  profile.c  profile.h  profile_priv.h  profilecpu.c  profiledsp.c  stacktrace.c  stacktrace.h  symbols-common.c  symbols.c  symbols.h  vars.c  vars.h
src/falcon/: CMakeLists.txt  Makefile  araglue.h  crossbar.c  crossbar.h  dsp.c  dsp.h  dsp_core.c  dsp_core.h  dsp_cpu.c  dsp_cpu.h  dsp_disasm.c  dsp_disasm.h  hostscreen.c  hostscreen.h  microphone.c  microphone.h  nvram.c  nvram.h  videl.c  videl.h
src/floppies/: ipf.c  kfs.c
src/gui-osx/: AlertHooks.h  AlertHooks.m  CMakeLists.txt  CreateFloppyController.h  CreateFloppyController.m  Hatari.icns  Info-Hatari Winuae.plist  Info-Hatari.plist  MacControlClient.h  MacControlClient.m  PrefsController.h  PrefsController.m  SDLMain.h  SDLMain.m  Shared.h  Shared.m  disk.icns  hatari.app.xcent  paths.m  screen_metal.m
src/gui-sdl/: .cvsignore  CMakeLists.txt  Makefile  dlgAbout.c  dlgAlert.c  dlgCpu.c  dlgDevice.c  dlgDisc.c  dlgDisk.c  dlgFileSelect.c  dlgFloppy.c  dlgHalt.c  dlgHardDisk.c  dlgJoystick.c  dlgKeyboard.c  dlgMain.c  dlgMemory.c  dlgNewDisc.c  dlgNewDisk.c  dlgRecord.c  dlgRom.c  dlgScreen.c  dlgSound.c  dlgSystem.c  dlgTosGem.c  font10x16.h  font5x8.h  sdlgui.c
src/gui-win/: Makefile  hatari-winicon.rc  opencon.c  opencon.h
src/includes/: acia.h  audio.h  avi_record.h  bios.h  blitter.h  breakcond.h  cart.h  cfgopts.h  change.h  clocks_timings.h  configuration.h  control.h  conv_gen.h  conv_st.h  createBlankImage.h  createDiscImage.h  crossbar.h  cycInt.h  cycles.h  debug.h  debugui.h  decode.h  dialog.h  dim.h  disass.h  dmaSnd.h  endianswap.h  errlog.h  event.h  fdc.h  file.h  file_archive.h  floppy.h  floppy_ipf.h  floppy_scp.h  floppy_stx.h  gemdos.h  gemdos_defines.h  gui_event.h  hdc.h  (+71 more)
src/retro/: CMakeLists.txt  audio.c  gui_event.c  joy_ui.c  keymap.c  main_retro.c  main_retro.h  microphone.c  screen.c  statusbar.c  timing.c
src/sdl/: CMakeLists.txt  audio.c  gui_event.c  joy_ui.c  keymap.c  keymap_sdl.h  main_sdl.c  microphone.c  screen.c  screen_sdl.h  statusbar.c  statusbar_sdl.h  timing.c
src/uae-cpu/: .cvsignore  CMakeLists.txt  Makefile  add_cycles.pl  build68k.c  compiler.c  compiler.h  cpuopti.c  events.h  fpp-unknown.h  fpp.c  gencpu.c  hatari-glue.c  hatari-glue.h  m68k.h_i86  maccess-big.h  maccess-i86.h  maccess-non-aligned.h  maccess.h  memory.c  memory.h  newcpu.c  newcpu.h  options_cpu.h  readcpu.c  readcpu.h  savestate.h  sysdeps.h  table68k
tests/: CMakeLists.txt  Makefile  TODO  check-bashisms.sh  cmdfifo.sh  configfile.sh  readme.txt  startup.s  test-breakcond.c  test-dummies.c  test-evaluate.c  test-scripting.sh  test-symbols.c
tests/autostart/: 2_secs.prg  4_secs.prg  4s_sleep.prg  (+3 more)
tools/: CMakeLists.txt  atari-convert-dir.1  atari-convert-dir.py  atari-hd-image.1  atari-hd-image.sh  devpac3-symbols-convert.sh  dsp-lod-symbols-convert.sh  hatari-local-midi-ring.sh  hatari-local-rs232.sh  hatari-prg-args.1  hatari-prg-args.sh  hatari-profile.py  hatari-tos-register.sh  zip2st.1  zip2st.sh
(+304 files in other folders)
